libraries/aptj/src/aptj/bindings/APTLibrary.java


  /**
   * Original signature : <code>long MOT_SetDCPositionLoopParams(long, long, long, long, long, long, long, long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:113</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCPositionLoopParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lProp, @org.bridj.ann.CLong long lInt, @org.bridj.ann.CLong long lIntLim, @org.bridj.ann.CLong long lDeriv, @org.bridj.ann.CLong long lDerivTime, @org.bridj.ann.CLong long lLoopGain, @org.bridj.ann.CLong long lVelFFwd, @org.bridj.ann.CLong long lAccFFwd, @org.bridj.ann.CLong long lPosErrLim);

  /**
   * Original signature : <code>long MOT_GetDCPositionLoopParams(long, long*, long*, long*, long*, long*, long*, long*, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:114</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCPositionLoopParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plProp, Pointer<org.bridj.CLong> plInt, Pointer<org.bridj.CLong> plIntLim, Pointer<org.bridj.CLong> plDeriv, Pointer<org.bridj.CLong> plDerivTime, Pointer<org.bridj.CLong> plLoopGain, Pointer<org.bridj.CLong> plVelFFwd, Pointer<org.bridj.CLong> plAccFFwd, Pointer<org.bridj.CLong> plPosErrLim)
  {
    return MOT_GetDCPositionLoopParams(lSerialNum, Pointer.getPeer(plProp), Pointer.getPeer(plInt), Pointer.getPeer(plIntLim), Pointer.getPeer(plDeriv), Pointer.getPeer(plDerivTime), Pointer.getPeer(plLoopGain), Pointer.getPeer(plVelFFwd), Pointer.getPeer(plAccFFwd), Pointer.getPeer(plPosErrLim));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCPositionLoopParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plProp, @Ptr long plInt, @Ptr long plIntLim, @Ptr long plDeriv, @Ptr long plDerivTime, @Ptr long plLoopGain, @Ptr long plVelFFwd, @Ptr long plAccFFwd, @Ptr long plPosErrLim);

  /**
   * Original signature : <code>long MOT_SetDCMotorOutputParams(long, float, float, float, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:115</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCMotorOutputParams(@org.bridj.ann.CLong long lSerialNum, float fContCurrLim, float fEnergyLim, float fMotorLim, float fMotorBias);

  /**
   * Original signature : <code>long MOT_GetDCMotorOutputParams(long, float*, float*, float*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:116</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCMotorOutputParams(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfContCurrLim, Pointer<Float> pfEnergyLim, Pointer<Float> pfMotorLim, Pointer<Float> pfMotorBias)
  {
    return MOT_GetDCMotorOutputParams(lSerialNum, Pointer.getPeer(pfContCurrLim), Pointer.getPeer(pfEnergyLim), Pointer.getPeer(pfMotorLim), Pointer.getPeer(pfMotorBias));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCMotorOutputParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfContCurrLim, @Ptr long pfEnergyLim, @Ptr long pfMotorLim, @Ptr long pfMotorBias);

  /**
   * Original signature : <code>long MOT_SetDCTrackSettleParams(long, long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:117</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCTrackSettleParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lSettleTime, @org.bridj.ann.CLong long lSettleWnd, @org.bridj.ann.CLong long lTrackWnd);

  /**
   * Original signature : <code>long MOT_GetDCTrackSettleParams(long, long*, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:118</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCTrackSettleParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plSettleTime, Pointer<org.bridj.CLong> plSettleWnd, Pointer<org.bridj.CLong> plTrackWnd)
  {
    return MOT_GetDCTrackSettleParams(lSerialNum, Pointer.getPeer(plSettleTime), Pointer.getPeer(plSettleWnd), Pointer.getPeer(plTrackWnd));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCTrackSettleParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plSettleTime, @Ptr long plSettleWnd, @Ptr long plTrackWnd);

  /**
   * Original signature : <code>long MOT_SetDCProfileModeParams(long, long, float)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:119</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCProfileModeParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lProfMode, float fJerk);

  /**
   * Original signature : <code>long MOT_GetDCProfileModeParams(long, long*, float*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:120</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCProfileModeParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plProfMode, Pointer<Float> pfJerk)
  {
    return MOT_GetDCProfileModeParams(lSerialNum, Pointer.getPeer(plProfMode), Pointer.getPeer(pfJerk));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCProfileModeParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plProfMode, @Ptr long pfJerk);

  /**
   * Original signature : <code>long MOT_SetDCJoystickParams(long, float, float, float, float, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:121</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCJoystickParams(@org.bridj.ann.CLong long lSerialNum, float fMaxVelLO, float fMaxVelHI, float fAccnLO, float fAccnHI, @org.bridj.ann.CLong long lDirSense);

  /**
   * Original signature : <code>long MOT_GetDCJoystickParams(long, float*, float*, float*, float*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:122</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCJoystickParams(@org.bridj.ann.CLong long lSerialNum, Pointer<Float> pfMaxVelLO, Pointer<Float> pfMaxVelHI, Pointer<Float> pfAccnLO, Pointer<Float> pfAccnHI, Pointer<org.bridj.CLong> plDirSense)
  {
    return MOT_GetDCJoystickParams(lSerialNum, Pointer.getPeer(pfMaxVelLO), Pointer.getPeer(pfMaxVelHI), Pointer.getPeer(pfAccnLO), Pointer.getPeer(pfAccnHI), Pointer.getPeer(plDirSense));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCJoystickParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long pfMaxVelLO, @Ptr long pfMaxVelHI, @Ptr long pfAccnLO, @Ptr long pfAccnHI, @Ptr long plDirSense);

  /**
   * Original signature : <code>long MOT_SetDCSettledCurrentLoopParams(long, long, long, long, long, long)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:123</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static native long MOT_SetDCSettledCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, @org.bridj.ann.CLong long lSettledProp, @org.bridj.ann.CLong long lSettledInt, @org.bridj.ann.CLong long lSettledIntLim, @org.bridj.ann.CLong long lSettledIntDeadBand, @org.bridj.ann.CLong long lSettledFFwd);

  /**
   * Original signature : <code>long MOT_GetDCSettledCurrentLoopParams(long, long*, long*, long*, long*, long*)</code><br>
   * <i>native declaration : lib\APT\APTAPI.fixed.h:124</i>
   */
  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  public static long MOT_GetDCSettledCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, Pointer<org.bridj.CLong> plSettledProp, Pointer<org.bridj.CLong> plSettledInt, Pointer<org.bridj.CLong> plSettledIntLim, Pointer<org.bridj.CLong> plSettledIntDeadBand, Pointer<org.bridj.CLong> plSettledFFwd)
  {
    return MOT_GetDCSettledCurrentLoopParams(lSerialNum, Pointer.getPeer(plSettledProp), Pointer.getPeer(plSettledInt), Pointer.getPeer(plSettledIntLim), Pointer.getPeer(plSettledIntDeadBand), Pointer.getPeer(plSettledFFwd));
  }

  @Convention(Convention.Style.StdCall)
  @org.bridj.ann.CLong
  protected native static long MOT_GetDCSettledCurrentLoopParams(@org.bridj.ann.CLong long lSerialNum, @Ptr long plSettledProp, @Ptr long plSettledInt, @Ptr long plSettledIntLim, @Ptr long plSettledIntDeadBand, @Ptr long plSettledFFwd);
}
